update for pagination

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,23 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+# For local development: localhost
+# For Docker: postgres (service name)
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+POSTGRES_PORT=5430
 
 # Database Connection URL
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
+# For local development: localhost
+# For Docker: postgres (service name)
+DATABASE_URL=postgresql://postgres:postgres@localhost:5430/postgres
+
+# Redis Configuration (for chunked upload sessions)
+# For local development: localhost
+# For Docker: redis (service name)
+REDIS_HOST=localhost
+REDIS_PORT=6370
+REDIS_PASSWORD=
+REDIS_DB=0
 
 # Server Configuration
 API_PORT=3000
