--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "exifr": "^7.1.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/ioredis": "^4.28.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
