--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,7 @@ SUPPORTED_FORMATS=jpg,jpeg,png,tif,tiff
 SYNC_STRATEGY=last_write_wins
 AUTO_SYNC_ENABLED=false
 SYNC_INTERVAL_MS=60000
+SYNC_ENABLED=true
 
 # Security
 ALLOWED_FILE_TYPES=jpg,jpeg,png,tif,tiff
@@ -48,7 +49,7 @@ MAX_UPLOAD_FILES=50
 CORS_ORIGIN=*
 
 # Logging
-LOG_LEVEL=debug
+LOG_LEVEL=info
 LOG_FILE=./logs/api.log
 LOG_CONSOLE=true
 
