--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.8"
 
 services:
+  # --- Database ---
   postgres:
     image: postgres:16-alpine
     container_name: image-mgmt-db
@@ -13,11 +14,6 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./database/init:/docker-entrypoint-initdb.d
-      - ./storage/images:/storage/images
-      - ./storage/thumbnails:/storage/thumbnails
-
-
-
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
@@ -25,6 +21,7 @@ services:
       timeout: 5s
       retries: 5
 
+  # --- Cache ---
   redis:
     image: redis:7-alpine
     container_name: image-mgmt-redis
@@ -40,25 +37,50 @@ services:
       retries: 5
     command: redis-server --appendonly yes
 
+  # --- Storage ---
   minio:
     image: quay.io/minio/minio:latest
     container_name: image-mgmt-storage
-    command: server /data --console-address ":9001"
+    # 1. ALLOW MINIO TO REACH THE HOST
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     ports:
       - "9000:9000"
       - "9001:9001"
     environment:
       MINIO_ROOT_USER: "admin"
       MINIO_ROOT_PASSWORD: "password"
+      # TELLS MINIO: "You are actually accessible here"
+      # MINIO_SERVER_URL: "http://localhost:9999/storage"
+      # TELLS MINIO: "Redirect browser logins here"
+      MINIO_BROWSER_REDIRECT_URL: "http://localhost:9999/storage/ui"
+      MINIO_NOTIFY_WEBHOOK_ENABLE_primary: "on"
+      MINIO_NOTIFY_WEBHOOK_ENDPOINT_primary: "http://host.docker.internal:3000/webhook/minio"
+      MINIO_NOTIFY_WEBHOOK_QUEUE_LIMIT_primary: "0"
+    command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
     restart: always
     healthcheck:
-      test: ["CMD", "bash", "-c", ":> /dev/tcp/127.0.0.1/9000"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-      start_period: 5s
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
+
+    # --- Web Server ---
+  nginx:
+    image: nginx:alpine
+    container_name: image-mgmt-nginx
+    ports:
+      - "9999:80" # Map Host 9999 -> Container 80
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    # CRITICAL: Allow Nginx to talk to your host machine (Node.js)
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    depends_on:
+      - minio
 
 volumes:
   postgres_data:
