--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -58,19 +58,19 @@ server {
 
     # 1. API
     location /api/ {
-        proxy_pass http://host.docker.internal:3000/api/;
+        proxy_pass http://api:3000/api/;
         proxy_set_header Host $host;
     }
 
     # 2. Webhooks
     location /webhook/ {
-        proxy_pass http://host.docker.internal:3000/webhook/;
+        proxy_pass http://api:3000/webhook/;
         proxy_set_header Host $host;
     }
 
     # 3. API Docs
     location /api-docs/ {
-        proxy_pass http://host.docker.internal:3000/api-docs/;
+        proxy_pass http://api:3000/api-docs/;
         proxy_set_header Host $host;
     }
     
