--- a/.env.example
+++ b/.env.example
@@ -1,58 +1,24 @@
+# Base Domain Configuration
+BASE_DOMAIN=192.168.0.24.nip.io
+PUBLIC_PORT=9999
+
 # Database Configuration
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
-# For local development: localhost
-# For Docker: postgres (service name)
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5430
 
 # Database Connection URL
-# For local development: localhost
-# For Docker: postgres (service name)
 DATABASE_URL=postgresql://postgres:postgres@localhost:5430/postgres
 
-# Redis Configuration (for chunked upload sessions)
-# For local development: localhost
-# For Docker: redis (service name)
-REDIS_HOST=localhost
-REDIS_PORT=6370
-REDIS_PASSWORD=
-REDIS_DB=0
+# MinIO Configuration
+PUBLIC_MINIO_ENDPOINT=s3.192.168.0.24.nip.io
+PUBLIC_MINIO_PORT=9999
+MINIO_BUCKET_IMAGES=images
+MINIO_BUCKET_THUMBNAILS=thumbnails
 
 # Server Configuration
 API_PORT=3000
 NODE_ENV=development
 HOST=0.0.0.0
-
-# File Storage (relative to apiserver directory)
-STORAGE_PATH=../storage
-IMAGES_PATH=../storage/images
-THUMBNAIL_PATH=../storage/thumbnails
-MAX_FILE_SIZE=52428800
-
-# Image Processing
-THUMBNAIL_WIDTH=300
-THUMBNAIL_HEIGHT=300
-THUMBNAIL_QUALITY=70
-SUPPORTED_FORMATS=jpg,jpeg,png,tif,tiff
-
-# Sync Configuration
-SYNC_STRATEGY=last_write_wins
-AUTO_SYNC_ENABLED=false
-SYNC_INTERVAL_MS=60000
-SYNC_ENABLED=true
-
-# Security
-ALLOWED_FILE_TYPES=jpg,jpeg,png,tif,tiff
-MAX_UPLOAD_FILES=50
-CORS_ORIGIN=*
-
-# Logging
-LOG_LEVEL=info
-LOG_FILE=./logs/api.log
-LOG_CONSOLE=true
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
